[package]
name = "safetyhook"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
better_default = "1.0"
log = { version = "0.4", features = [] }
thiserror = "2.0"
windows = { version = "0.62", features = [
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader"
] }
zydis = "4.1"

[dev-dependencies]
env_logger = "0.11"

[features]

[[example]]
name = "example-add"
path = "examples/add.rs"

